examples: close /all/ connections.